# basic-infra

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE-CODE-PROMPT.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  tasklist.md
.github/workflows/: test.yml
authentik/blueprints/: telcoss-oidc.yaml
authentik/compose/: authentik.yml
authentik/db/: README.md  bootstrap.sql
client-sdks/python/: README.md  pyproject.toml
client-sdks/python/tests/: test_basic_infra_provider.py  test_cache.py  test_capabilities.py  test_client.py  test_live.py  test_models.py
client-sdks/python/vams_llm_client/: __init__.py  cache.py  capabilities.py  client.py  errors.py  models.py
client-sdks/python/vams_llm_client/providers/: anthropic.py  base.py  basic_infra.py  openai.py
docs/: bridge-v8.md
docs/adr/: 0001-platform-charter.md  0002-api-contract.md  0003-multi-tenancy.md  0004-provider-switching.md  0005-backend-pluggability.md  0010-storage-abstraction.md  0011-observability-foundations.md  0012-distributed-tracing.md  0013-postgres-multi.md  0014-redis-shared.md  0015-sdk-storage-wheel-packaging.md  0016-pre-prod-hardening.md  0017-provisioning-idempotency-test-strategy.md  0018-authentik-platform-idp.md  0020-pointer.md
docs/api/: openapi.yaml
docs/architecture/: bridge-v11.md  bridge-v12.md
docs/client-integration/: pamyat-naroda.md  telcoss.md
docs/runbooks/: adding-a-backend.md  managing-tenants.md  model-migration.md  observability-operations.md  pdf-intake-storage-migration.md  postgres-adoption.md  redis-adoption.md  tracing-adoption.md
docs/specs/: llm-platform-spec.md  week-4-tasklist.md
llm/: backends.yaml
llm/compose/: compose.gateway.yml  compose.llama-cpp.yml  compose.redis.yml  compose.tei.yml
llm/gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml
llm/gateway/app/: config.py  exceptions.py  main.py
llm/gateway/app/api/: deps.py
llm/gateway/app/api/v1/: chat.py  completions.py  embeddings.py  models.py  rerank.py  tenants.py
llm/gateway/app/backends/: anthropic.py  base.py  openai_compat.py  tei.py  tei_rerank.py  translate.py  vllm.py
llm/gateway/app/observability/: logging.py  metrics.py
llm/gateway/app/routing/: health.py  registry.py  router.py
llm/gateway/app/schemas/: chat.py  completions.py  embeddings.py  errors.py  models.py  rerank.py  tenant.py
llm/gateway/app/tenancy/: auth.py  cli.py  ratelimit.py  store.py
llm/gateway/tests/: conftest.py
llm/gateway/tests/integration/: test_api.py  test_gateway_dispatch.py  test_health.py  test_openapi_contract.py  test_ratelimit_redis.py  test_router.py
llm/gateway/tests/unit/: test_adapters.py  test_auth.py  test_ratelimit.py  test_registry.py  test_schemas.py  test_tenant_store.py
models/: README.md
observability/compose/: observability.yml
observability/grafana/dashboards/: basic-infra-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml  tempo.yml
observability/loki/: loki.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail.yml
outbox/: Dockerfile
outbox/basic_infra_outbox/: __init__.py  __main__.py  dispatcher.py  sinks.py
outbox/compose/: outbox.yml
outbox/tests/: test_dispatcher.py
postgres/: __init__.py  _local.py  _managed.py  _port.py  cli.py
postgres/compose/: postgres.yml
postgres/init/: 00-template-postgis.sql
postgres/tests/: test_cli.py  test_local_grant.py
redis_shared/: __init__.py  cli.py  config.py  local_adapter.py  managed_adapter.py  port.py
redis_shared/acl/: users.acl.example
redis_shared/compose/: redis-shared.yml
redis_shared/compose/conf/: redis.conf
redis_shared/tests/: test_local_provision.py  test_local_provision_idempotency.py
scripts/: migrate-models-from-pamyat.sh  seed-tenants.py
sdk/basic_infra_observability_client/: README.md  pyproject.toml
sdk/basic_infra_observability_client/basic_infra_observability_client/: __init__.py  config.py  context.py  logging_setup.py  metrics.py  tracing.py
sdk/basic_infra_observability_client/tests/: test_sdk.py  test_tracing.py
sdk/basic_infra_postgres_client/: README.md  pyproject.toml
sdk/basic_infra_postgres_client/basic_infra_postgres_client/: __init__.py  config.py  engine.py  health.py  session.py
sdk/basic_infra_postgres_client/tests/: test_sdk.py
sdk/basic_infra_redis_client/: README.md  pyproject.toml
sdk/basic_infra_redis_client/basic_infra_redis_client/: __init__.py  client.py  config.py  health.py  namespace.py
sdk/basic_infra_redis_client/tests/: test_sdk.py
sdk/basic_infra_storage_client/: README.md  pyproject.toml
sdk/basic_infra_storage_client/basic_infra_storage_client/: __init__.py  async_client.py  client.py  config.py
sdk/basic_infra_storage_client/tests/: test_async_client.py
storage/: __init__.py
storage/adapters/: __init__.py  _s3_compatible.py  filesystem.py  minio.py  s3.py
storage/compose/: minio.yml
storage/ports/: __init__.py  blob_store.py  exceptions.py
storage/tests/: conftest.py  test_filesystem_adapter.py  test_s3_adapter.py  test_s3_lifecycle.py
tracing/: README.md
tracing/compose/: tracing.yml
tracing/compose/tempo/: tempo.yaml
