[tool.poetry]
name = "basic-infra-gateway"
version = "0.1.0"
description = "LLM gateway service for the basic-infra platform"
authors = ["Dmitry"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic = "^2.7"
pydantic-settings = "^2.4"
httpx = "^0.27"
structlog = "^24.4"
redis = "^5.0"
pyyaml = "^6.0"
typer = "^0.12"
argon2-cffi = "^23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
testcontainers = { extras = ["redis"], version = "^4.7" }
ruff = "^0.6"
mypy = "^1.11"
respx = "^0.21"   # httpx mock

[tool.poetry.scripts]
basic-infra = "llm.gateway.app.tenancy.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: requires live backends (skipped by default)",
]
