[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "basic-infra-observability-client"
version = "0.1.0"
description = "SDK для observability basic-infra (structlog → JSON + prometheus_client + контекст)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "basic-infra maintainers" }]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["basic_infra_observability_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running observability stack (Prometheus/Loki/Grafana)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
