[project]
name = "basic-infra-postgres-client"
version = "0.1.0"
description = "Data-plane SDK для tenant-БД basic-infra (database-per-client-project)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["basic_infra_postgres_client*"]

# PEP 561: ship the inline-type marker in the wheel (setuptools needs this
# explicitly; the hatchling SDKs include it automatically).
[tool.setuptools.package-data]
basic_infra_postgres_client = ["py.typed"]
