[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "basic-infra-redis-client"
version = "0.1.0"
description = "SDK для shared Redis basic-infra (ACL-tenant + key-namespace, async/sync)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "basic-infra maintainers" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["basic_infra_redis_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running Redis (shared Redis profile)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
